@@ -625,7 +625,7 @@
 	(width-correct . 0)
 	(outer . #t)
 	(direction . -1)
-	(edge-width . (0.5 . 0.5))
+	(edge-widen . (0.5 . 0.5))
 	(edge-height . (1.0 . 1.0))
 	(shorten-pair . (0.0 . 0.0))
 	(thickness .  1.0)
@@ -975,7 +975,7 @@
 	(gap . 2.0)
 	(padding . 0.9)
 	(thickness . 1.6)
-	(edge-width . (0.0 . 0.0))
+	(edge-widen . (0.0 . 0.0))
 	(edge-height . (0.7 . 0.7))
 	(shorten-pair . (-0.2 . -0.2))
 	(before-line-breaking-callback . ,Tuplet_bracket::before_line_breaking)
